# Kitsune

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  cmake-variants.json
CMake/: KitsuneFunctions.cmake  KitsuneGlobals.cmake
Examples/: CMakeLists.txt
Examples/Sandbox/: Sandbox.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/ApplicationCore/: Application.cpp  Application.h  BadMonitorCreationException.h  BadWindowCreationException.h  CMakeLists.txt  CommandLineArguments.h  Environment.cpp  Environment.h  IMonitor.h  IPlatformApplication.h  IWindow.h  VideoMode.h
Source/Runtime/ApplicationCore/Null/: NullWindow.cpp  NullWindow.h
Source/Runtime/ApplicationCore/Windows/: WindowsApplication.cpp  WindowsApplication.h  WindowsEnvironment.cpp  WindowsMonitor.cpp  WindowsMonitor.h  WindowsWindow.cpp  WindowsWindow.h
Source/Runtime/Foundation/: CMakeLists.txt  KitsuneFoundation.manifest  KitsuneFoundation.rc
Source/Runtime/Foundation/Algorithms/: Copy.h  Count.h  Destroy.h  Distance.h  Equal.h  Fill.h  Find.h  ForEach.h  Move.h  Replace.h  Reverse.h  Swap.h  Uninitialized.h
Source/Runtime/Foundation/Common/: Features.h  Macros.h  Predefined.h  Types.h
Source/Runtime/Foundation/Concepts/: Character.h
Source/Runtime/Foundation/Containers/: Array.h
Source/Runtime/Foundation/Diagnostics/: Assert.cpp  Assert.h  BadAllocException.h  IException.h  InvalidArgumentException.h  IsDebuggerAttached.h  MessageBox.h  OutOfRangeException.h  SourceLocation.h  WindowsDebuggerAttached.cpp  WindowsMessageBox.cpp
Source/Runtime/Foundation/Filesystem/: Path.h  WindowsPath.cpp  WindowsPath.h
Source/Runtime/Foundation/Iterators/: Iterator.h  IteratorTraits.h  ReverseIterator.h
Source/Runtime/Foundation/Logging/: AnsiColorSink.cpp  AnsiColorSink.h  ConsoleLoggerSink.cpp  ConsoleLoggerSink.h  ConsoleStream.cpp  ConsoleStream.h  GlobalLog.cpp  GlobalLog.h  ILogSink.h  ILoggerSink.h  IStream.h  LogMessage.h  LogSeverity.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  StreamBuffer.h  WindowsConsoleStream.cpp  WriteStreamIterator.h
Source/Runtime/Foundation/MSVC/: MSVCInterlocked.inl
Source/Runtime/Foundation/Maths/: AABB.h  Vector2.h  VectorBase.h
Source/Runtime/Foundation/Memory/: AddressOf.h  Allocator.h  BadAllocException.h  BadWeakPtrException.h  CMallocApi.h  Deleter.h  GlobalAllocator.h  IMemoryApi.h  Memory.cpp  Memory.h  ScopedPtr.h  SharedPtr.h
Source/Runtime/Foundation/String/: CharTraits.h  Format.h  FormatArguments.h  FormatException.h  FormatScanner.cpp  FormatScanner.h  Formatter.h  InvalidUnicodeException.h  String.h  StringView.h  ToString.h
Source/Runtime/Foundation/Templates/: Exchange.h  Forward.h  IsAnyOf.h  Move.h  Swap.h
Source/Runtime/Foundation/Threading/: ClangInterlocked.inl  Interlocked.h  LockGuard.h  Mutex.h  ThreadSafety.h  WindowsMutex.cpp
Source/Runtime/Foundation/Utilities/: EnumFlags.h
Source/Runtime/Launch/: CMakeLists.txt  EngineLoop.cpp  EngineLoop.h  EngineMain.cpp
Source/Tests/: CMakeLists.txt
Source/Tests/FoundationTests/: AddressOfTests.cpp  AnsiColorSinkTests.cpp  ArrayTests.cpp  BasicStringTests.cpp  CharTraitsTests.cpp  CompareStrings.h  CopyTests.cpp  CountTests.cpp  DestroyTests.cpp  DistanceTests.cpp  EqualTests.cpp  FillTests.cpp  FindTests.cpp  ForEachTests.cpp  FormatTests.cpp  FoundationMain.cpp  IteratorWrappers.h  LoggerTests.cpp  MemoryTests.cpp  MoveTests.cpp  ReplaceTests.cpp  ReverseIteratorTests.cpp  ReverseTests.cpp  ScopedPtrTests.cpp  SharedPtrTests.cpp  StreamBufferTests.cpp  StringViewTests.cpp  SwapTests.cpp  TestContainer.h  ToStringTests.cpp  UninitializedTests.cpp  Vector2Tests.cpp  WindowsPathTests.cpp  WriteStreamIteratorTests.cpp
(+3 files in other folders)
